# bitcoinmakerspace

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
web/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
web/locales/: en.yml  es.yml  fr.yml  pt.yml
web/scripts/: build.sh  run.sh
web/src/: app.rs  lib.rs  main.rs  store.rs  styles.css
web/src/components/: color_mode_switch.rs  container.rs  drawer.rs  footer.rs  mod.rs  navigation.rs  page_detail.rs
web/src/routes/: contact.rs  faq.rs  home.rs  mod.rs  not_found.rs  wall.rs
