[package]
name = "bitcoinmakerspace"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
gloo = "0.8.0"
once_cell = "1.10.0"
rust-i18n = "1.2.1"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "DomTokenList",
  "Element",
  "MediaQueryList",
  "Navigator",
  "Window",
]