[package]
name = "bitcoinmakerspace"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
gloo = "0.8.0"
log = "0.4"
once_cell = "1.10.0"
rust-i18n = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.86"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yewdux = "0.9.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "DomTokenList",
  "Element",
  "MediaQueryList",
  "Navigator",
  "Window",
]